--- a/index.html
+++ b/index.html
@@ -5,31 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Светлана Штименко - фрилансер, веб-разработчик</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:400;700&display=swap&subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/wow.min.js" defer></script>
+    <script src="js/main.js" defer></script>
 </head>
 <body>
     <header class="hero">
         <div class="container">
             <div class="hero-header">
-                <img src="img\avatar.jpg" alt="Светлана Штименко" class="logo" />
+                <img src="img/avatar.jpg" alt="Светлана Штименко" class="logo" />
                 <div class="social-links">
                     <a href="https://github.com/Svet-lik" class="social-link"><img src="img\social\github.svg" alt="github"></a>
                     <a href="#" class="social-link"><img src="img\social\twitter.svg" alt="twitter"></a>
-                    <a href="https://www.instagram.com/svet_lik13/" class="social-link"><img src="img\social\instagram.svg" alt="instagram"></a>
-                    <a href="https://www.facebook.com/profile.php?id=100046338124268" class="social-link"><img src="img\social\facebook.svg" alt="fb"></a>
+                    <a href="#" class="social-link"><img src="img\social\instagram.svg" alt="instagram"></a>
+                    <a href="#" class="social-link"><img src="img\social\facebook.svg" alt="fb"></a>
                 </div>
                 <!-- /.social-links -->
             </div>
             <!-- /.hero-header -->
             <div class="hero-content">
                 <div class="hero-text">
-                    <span class="hero-subtitle">Фрилансер</span>
-                    <h1 class="hero-title">Светлана Штименко</h1>
-                    <p class="hero-description">Разрабатываю сайты для малого и среднего бизнеса. У меня можно заказать дизайн и верстку небольшого сайта или интернет-магазина</p>
-                    <button class="button hero-button">Бесплатная консультация</button>
+                    <span class="hero-subtitle wow fadeInRight" data-wow-delay="0.2s">Фрилансер</span>
+                    <h1 class="hero-title wow fadeInRight" data-wow-delay="0.4s">Светлана Штименко</h1>
+                    <p class="hero-description wow fadeInRight" data-wow-delay="0.6s">Разрабатываю сайты для малого и среднего бизнеса. <br>У меня можно заказать дизайн и верстку небольшого сайта или интернет-магазина</p>
+                    <button class="button hero-button wow fadeInRight" data-wow-delay="0.8s">Бесплатная консультация</button>
                 </div>
                 <!-- /.hero-text -->
-                <div class="hero-avatar"></div>
+                <div class="hero-avatar wow fadeIn" data-wow-delay="1.5s"></div>
                 <!-- /.hero-avatar -->
             </div>
             <!-- /.hero-container -->
@@ -37,5 +40,95 @@
         <!-- /.container -->
     </header>
     <!-- /.hero -->
+    <main>
+        <section class="features section">
+            <div class="container">
+                <h2 class="section-title wow fadeInDown" data-wow-delay="1.7s">Со мной удобно работать</h2>
+                <div class="features-block">
+                    <div class="featutes-item wow fadeInDown" data-wow-delay="0.3s">
+                        <img src="img/features/offer-img.svg" alt="По договору" class="features-image">
+                        <h3 class="features-title">По договору</h3>
+                        <p class="featutes-text">Предоставлю все документы для бухгалтерии: договоры, счета и акты. Работаю как ИП без НДС.</p>
+                    </div>
+                    <div class="featutes-item wow fadeInDown" data-wow-delay="0.6s">
+                        <img src="img/features/deadline-img.svg" alt="Точно в срок" class="features-image">
+                        <h3 class="features-title">Точно в срок</h3>
+                        <p class="featutes-text">В договоре прописана моя  ответственность за срок проекта. Если просрочу — плачу неустойку. </p>
+                    </div>
+                    <div class="featutes-item wow fadeInDown" data-wow-delay="0.9s">
+                        <img src="img/features/agreement-img.svg" alt="Ценник под вас" class="features-image">
+                        <h3 class="features-title">Ценник под вас</h3>
+                        <p class="featutes-text">Если у вас нетиповой проект, сделаю рассчет цены за работу и объясню, как складывается цена.</p>
+                    </div>
+                    <div class="featutes-item wow fadeInDown" data-wow-delay="1.2s">
+                        <img src="img/features/steps-img.svg" alt="Премежуточные итоги" class="features-image">
+                        <h3 class="features-title">Премежуточные итоги</h3>
+                        <p class="featutes-text">Показываю работу поэтапно, а не в последий момент перед крайним сроком. </p>
+                    </div>
+                    <div class="featutes-item wow fadeInDown" data-wow-delay="1.5s">
+                        <img src="img/features/storage-img.svg" alt="Хостинг и домен" class="features-image">
+                        <h3 class="features-title">Хостинг и домен</h3>
+                        <p class="featutes-text">Если мы договорились о цене проекта, в неё входит всё: домен и хостинг на год + SSL сертификат.</p>
+                    </div>
+                    <div class="featutes-item wow fadeInDown" data-wow-delay="1.8s">
+                        <img src="img/features/conversation-img.svg" alt="Не брошу после сдачи" class="features-image">
+                        <h3 class="features-title">Не брошу после сдачи</h3>
+                        <p class="featutes-text">Научу вас или вашего сотрудника пользоваться сайтом, запишу видео-инструкции.</p>
+                    </div>
+                </div>
+                <!-- /.features-block -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.features -->    
+    </main>
+    <footer class="section">
+        <div class="container">
+            <h2 class="section-title wow fadeIn" data-wow-delay="0.5s">Свяжитесь со мной</h2>
+            <div class="contacts-block">
+                <form action="#" class="contacts-form wow fadeInLeft" data-wow-delay="0.7s">
+                    <h4 class="form-title">Можете просто оставить заявку, <br>я позвоню вам сегодня</h4>
+                    <input type="text" class="input input-name" placeholder="Ваше имя">
+                    <input type="text" class="input input-phone" placeholder="Ваш телефон">
+                    <button class="button form-button">Бесплатная консультация</button>
+                </form>
+                <div class="contacts-text wow fadeInRight" data-wow-delay="0.9s">
+                    <div class="contacts-data">
+                        <div class="contacts-phone">
+                            <h4 class="contacts-title">Телефон</h4>
+                            <a href="tel:+79991234567" class="contacts-link">+7 999 123-45-67</a>
+
+                        </div>
+                        <!-- /.contacts-phone -->
+                        <div class="contacts-mail">
+                            <h4 class="contacts-title">Почта</h4>
+                            <a href="mailto:ivanov@mail.ru" class="contacts-link">ivanov@mail.ru</a>
+                        </div>
+                        <!-- /.contacts-mail -->
+                        <contacts-social>
+                            <h4 class="contacts-title">Соцсети</h4>
+                            <a href="#" class="contacts-link">t.me/shtim</a>
+                            <a href="#" class="contacts-link">vk.me/shtim</a>
+                            <a href="#" class="contacts-link">fb.me/shtim</a>
+                            
+                        </contacts-social>
+                    </div>
+                    <!-- /.contacts-data -->
+                    <div class="social-links">
+                        <a href="https://github.com/Svet-lik" class="social-link"><img src="img\social\github.svg" alt="github"></a>
+                        <a href="#" class="social-link"><img src="img\social\twitter.svg" alt="twitter"></a>
+                        <a href="#" class="social-link"><img src="img\social\instagram.svg" alt="instagram"></a>
+                        <a href="#" class="social-link"><img src="img\social\facebook.svg" alt="fb"></a>
+                    </div>
+                    <!-- /.social-links -->
+                    <a href="#" class="contacts-policy">Политика конфиденциальности</a>
+                </div>
+                <!-- /.contacts-text -->
+            </div>
+            <!-- /.contacts-block -->
+        </div>
+        <!-- /.container -->
+    </footer>
+    <!-- /.section -->
 </body>
 </html>
