--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             Со мной удобно работать
           </h2>
           <div class="features-block">
-            <div class="featutes-item wow fadeInDown" data-wow-delay="0.3s">
+            <div class="features-item wow fadeInDown" data-wow-delay="0.3s">
               <img
                 src="img/features/offer-img.svg"
                 alt="По договору"
@@ -85,7 +85,7 @@
                 акты. Работаю как ИП без НДС.
               </p>
             </div>
-            <div class="featutes-item wow fadeInDown" data-wow-delay="0.6s">
+            <div class="features-item wow fadeInDown" data-wow-delay="0.6s">
               <img
                 src="img/features/deadline-img.svg"
                 alt="Точно в срок"
@@ -97,7 +97,7 @@
                 просрочу — плачу неустойку.
               </p>
             </div>
-            <div class="featutes-item wow fadeInDown" data-wow-delay="0.9s">
+            <div class="features-item wow fadeInDown" data-wow-delay="0.9s">
               <img
                 src="img/features/agreement-img.svg"
                 alt="Ценник под вас"
@@ -109,7 +109,7 @@
                 объясню, как складывается цена.
               </p>
             </div>
-            <div class="featutes-item wow fadeInDown" data-wow-delay="1.2s">
+            <div class="features-item wow fadeInDown" data-wow-delay="1.2s">
               <img
                 src="img/features/steps-img.svg"
                 alt="Премежуточные итоги"
@@ -121,7 +121,7 @@
                 сроком.
               </p>
             </div>
-            <div class="featutes-item wow fadeInDown" data-wow-delay="1.5s">
+            <div class="features-item wow fadeInDown" data-wow-delay="1.5s">
               <img
                 src="img/features/storage-img.svg"
                 alt="Хостинг и домен"
@@ -133,7 +133,7 @@
                 хостинг на год + SSL сертификат.
               </p>
             </div>
-            <div class="featutes-item wow fadeInDown" data-wow-delay="1.8s">
+            <div class="features-item wow fadeInDown" data-wow-delay="1.8s">
               <img
                 src="img/features/conversation-img.svg"
                 alt="Не брошу после сдачи"
