--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Светлана Штименко - фрилансер, веб-разработчик</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:400;700&display=swap&subset=cyrillic"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap&subset=cyrillic"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/animate.min.css" />
